@@ -4,8 +4,6 @@
 % of the LaTeX Project Public License Distributed from CTAN
 % archives in directory macros/latex/base/lppl.txt.
 
-% Nothing to be done...
-
 \usepackage[dvips]{graphics}
 \usepackage{hyperref}
 
