@@ -26,46 +26,46 @@
 \def\pgfsys@stroke{%
   \ifpgfsys@@clipnext%
     \ifpgfsys@eorule%
-      \pgfsysprotocol@literal{gsave pgfsc stroke grestore eoclip newpath}%
+      \pgfsysprotocol@literal{gsave pgfsc pgfstr grestore eoclip newpath}%
     \else%
-      \pgfsysprotocol@literal{gsave pgfsc stroke grestore clip newpath}%
+      \pgfsysprotocol@literal{gsave pgfsc pgfstr grestore clip newpath}%
     \fi%
     \pgfsys@@clipnextfalse%
   \else%
     \ifpgf@strokecolor%
-      \pgfsysprotocol@literal{gsave pgfsc stroke grestore newpath}%
+      \pgfsysprotocol@literal{gsave pgfsc pgfstr grestore newpath}%
     \else%
-      \pgfsysprotocol@literal{stroke}%
+      \pgfsysprotocol@literal{pgfstr}%
     \fi%
  \fi}
 \def\pgfsys@fill{%
   \ifpgfsys@@clipnext%
     \ifpgfsys@eorule%
-      \pgfsysprotocol@literal{gsave pgffc eofill grestore eoclip newpath}%
+      \pgfsysprotocol@literal{gsave pgffc pgfeofill grestore eoclip newpath}%
     \else%
-      \pgfsysprotocol@literal{gsave pgffc fill grestore clip newpath}%
+      \pgfsysprotocol@literal{gsave pgffc pgffill grestore clip newpath}%
     \fi%
     \pgfsys@@clipnextfalse%
   \else%
     \ifpgf@fillcolor%
       \ifpgfsys@eorule%
-        \pgfsysprotocol@literal{gsave pgffc eofill grestore newpath}%
+        \pgfsysprotocol@literal{gsave pgffc pgfeofill grestore newpath}%
       \else%
-        \pgfsysprotocol@literal{gsave pgffc fill grestore newpath}%
+        \pgfsysprotocol@literal{gsave pgffc pgffill grestore newpath}%
       \fi%
     \else%
       \ifpgfsys@eorule%
-        \pgfsysprotocol@literal{eofill}%
+        \pgfsysprotocol@literal{pgfeofill}%
       \else%
-        \pgfsysprotocol@literal{fill}%
+        \pgfsysprotocol@literal{pgffill}%
       \fi%
     \fi%
  \fi}
 \def\pgfsys@fillstroke{%
   \ifpgfsys@eorule%
-    \pgfsysprotocol@literal{gsave pgffc eofill grestore gsave pgfsc stroke grestore}%
+    \pgfsysprotocol@literal{gsave pgffc pgfeofill grestore gsave pgfsc pgfstr grestore}%
   \else%
-    \pgfsysprotocol@literal{gsave pgffc fill grestore gsave pgfsc stroke grestore}%
+    \pgfsysprotocol@literal{gsave pgffc pgffill grestore gsave pgfsc pgfstr grestore}%
   \fi%
   \ifpgfsys@@clipnext%
     \ifpgfsys@eorule%
@@ -137,6 +137,45 @@
   \else%
     \pgfsysps@color@resetnow%
   \fi}
+
+
+% Opacity
+
+\newif\ifpgf@sys@dvips@warning@given
+\def\pgf@sys@dvips@warning{%
+  \ifpgf@sys@dvips@warning@given%
+  \else%
+    \global\pgf@sys@dvips@warning@giventrue%
+    \PackageWarning{pgf}{You are trying to use opacity with
+      PostScript, which is not allowed by the standard. PGF uses
+      GhostScript's non-portable extensions to support it
+      anyway. These extensions are not supported by printers or anyone
+      else. I felt obliged to tell you this once}% 
+  \fi%
+}
+\def\pgfsys@@fill@opacity#1{%
+  \pgf@sys@dvips@warning%
+  \pgfsysprotocol@literal{/pgffill{gsave #1 .setopacityalpha fill grestore}def}%
+  \pgfsysprotocol@literal{/pgfeofill{gsave #1 .setopacityalpha eofill grestore}def}%
+}
+\def\pgfsys@@stroke@opacity#1{%
+  \pgf@sys@dvips@warning%
+  \pgfsysprotocol@literal{/pgfstr{gsave #1 .setopacityalpha stroke grestore}def}%
+}
+
+\let\pgfsys@fill@opacity=\pgfsys@@fill@opacity
+\let\pgfsys@stroke@opacity=\pgfsys@@stroke@opacity
+
+\def\pgfsysghostviewopacityfalse{%
+  \let\pgfsys@fill@opacity=\@gobble
+  \let\pgfsys@stroke@opacity=\@gobble
+}
+
+\def\pgfsysghostviewopacitytrue{%
+  \let\pgfsys@fill@opacity=\pgfsys@@fill@opacity
+  \let\pgfsys@stroke@opacity=\pgfsys@@stroke@opacity
+}
+
 
 
 \endinput
