@@ -22,19 +22,6 @@
 \def\pgfsys@invoke#1{\special{ps:: #1}}
 \def\pgfsys@outerinvoke#1{\special{ps: #1}}
 
-\newif\ifpgf@sys@dvips@warning@given
-\def\pgf@sys@dvips@warning{%
-  \ifpgf@sys@dvips@warning@given%
-  \else%
-    \global\pgf@sys@dvips@warning@giventrue%
-    \PackageWarning{pgf}{You are trying to use transparency with
-      PostScript which is, most unfortunately, not possible. All your 
-      transparency specifications will, sadly, be ignored. I am sorry}%
-  \fi%
-}
-\def\pgfsys@fill@opacity#1{\pgf@sys@dvips@warning}
-\def\pgfsys@stroke@opacity#1{\pgf@sys@dvips@warning}
-
 \def\pgfsys@beginpicture{\special{ps: }\special{ps::[begin]}\pgfsys@invoke{pgfo}}
 \def\pgfsys@endpicture{\pgfsys@invoke{pgfc}\special{ps::[end]}}
 \def\pgfsys@hbox#1{%
@@ -144,6 +131,9 @@
   \special{!
     /pgfsc{}B% stroke color is empty by default
     /pgffc{}B% fill color is empty by default
+    /pgfstr{stroke}B%
+    /pgffill{fill}B%
+    /pgfeofill{eofill}B%
     /pgfl{clip newpath}B% clipping
     /pgfe{a dup 0 rlineto exch 0 exch rlineto neg 0 rlineto closepath}B% rectangle
     /pgfw{setlinewidth}B% setlinewidth
